# vajra.ai

./: .env.example  CMakeLists.txt  Dockerfile  LICENSE  QUICK_START.md  README.md  aham.conf  allowlist.conf  litellm_config.yaml  remove_prefix.py  rename_aham.py
assets/: chat.html
platform_config/: device.conf
skills/linux/: SKILL.md
skills/memory/: SKILL.md
skills/tmux/: SKILL.md
skills/tmux/scripts/: find-sessions.sh  tmux-session.sh  wait-for-text.sh
src/agent/: CMakeLists.txt  agent.c  agent.h  tool_registry.c  tool_registry.h
src/cli/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  aham.h  config.c  config.h  log.c  log.h  templates.c  templates.h  types.c  types.h
src/gateway/: CMakeLists.txt  gateway.c  gateway.h
src/heartbeat/: CMakeLists.txt  heartbeat.c  heartbeat.h
src/history/: CMakeLists.txt  history.c  history.h
src/memory/: CMakeLists.txt  md_memory.c  md_memory.h
src/providers/: CMakeLists.txt  http_client.c  http_client.h  provider.h  registry.c  registry.h
src/providers/ollama/: CMakeLists.txt  ollama.c  ollama.h
src/providers/openai/: CMakeLists.txt  openai.c  openai.h
src/security/: CMakeLists.txt  allowlist.c  allowlist.h
src/tools/: tool.h
src/tools/file_ops/: CMakeLists.txt  file_tool.c  file_tool.h
src/tools/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
src/tools/serial/: CMakeLists.txt  serial_tool.c  serial_tool.h
src/tools/shell/: CMakeLists.txt  shell_tool.c  shell_tool.h
src/tools/skills/: CMakeLists.txt  skills.c  skills.h
src/ux/: CMakeLists.txt  slash_commands.c  slash_commands.h  typing.c  typing.h
templates/: AGENT.md  SOUL.md  TOOLS.md
templates/memory/: MEMORY.md
